# cybersec-toolkit

./: .coverage  .dockerignore  .env  .env.example  .gitignore  API.md  ATTACK_MAPPING_IMPLEMENTATION.md  AZURE_DEPLOYMENT.md  AZURE_POST_DEPLOYMENT.md  AZURE_QUICK_START.md  CLOUDFLARE_DEPLOYMENT.md  Dockerfile  Makefile  Procfile  README.md  SECOND_STAGE_FIX_REPORT.md  STRESS_TEST_USAGE.md  UI_WIRING_CHECKLIST.md  adversarial_dataset.json  adversarial_detection_results.json  adversarial_full_dataset.json  adversarial_report_v2.json  adversarial_results_v2.csv  alembic.ini  attack.db  azure_cli_commands.md  baseline_run.txt  benchmark_per_target.py  benchmark_results.json  debug_os_fp.py  deploy_azure.sh  detection_results.csv  disable_rls.sql  docker-compose.yml  docker-entrypoint.sh  enhanced_attack_mapping.json  failure_cases_v2.json  full_output.txt  generate_evaluation_outputs.py  geo-ip-architecture.md  (+37 more)
.github/workflows/: azure-deploy.yml  main_cybersec.yml  test.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  (+6 more)
attack_data/: pre-attack.json
benchmark/: run_benchmark.py
cybersec/: __init__.py  api.py  config.py
cybersec-new/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
cybersec-new/alembic/: env.py
docs/: benchmark_report.md  nmap_comparison.md  scanner_accuracy_report.md
e2e/: playwright.config.ts
infrastructure/: limits.conf  sysctl.conf
scan_results/: scan_scanme.nmap.org_20260419_222644.json  scan_scanme.nmap.org_20260419_222649.csv
scripts/: build_attack_db.py
supabase/: config.toml
tests/: compare_nmap_vs_ours.py  conftest.py  evaluate_service_detection.py  run_all_stress.sh  scan_docker_targets.py  scan_target.py  test_adaptive_concurrency.py  test_coverage_boost.py  test_cve_lookup_focused.py  test_edge_cases.py  test_final_coverage.py  test_integration.py  test_port_analyzer_focused.py  test_scanner.py  test_scanner_basic.py  test_scanner_working.py  test_service_detect.py  test_service_detect_simple.py  test_service_detect_working.py  test_simple_focused.py  test_tls_fingerprinting_integration.py  test_tls_integration_final.py  test_udp_scan.py  test_udp_scan_comprehensive.py  test_udp_scan_working.py  test_utils.py  test_utils_comprehensive.py  test_utils_working.py  test_working_final.py
(+342 files in other folders)
