[tool.poetry]
name = "cybersec"
version = "0.1.0"
description = "Security analysis and automation tool"
authors = ["Cybersec Team"]
readme = "README.md"
packages = [{include = "cybersec"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.30"}
sqlalchemy = "^2.0"
asyncpg = "^0.29"
alembic = "^1.13"
pydantic-settings = "^2"
httpx = "^0.27"
click = "^8"
rich = "^13.7"
python-jose = {extras = ["cryptography"], version = "^3.3"}
passlib = {extras = ["bcrypt"], version = "^1.7"}
python-multipart = "^0.19"
groq = "^0.5"
aiofiles = "^23.2"
reportlab = "^4.2"
dnspython = "^2.6"
python-whois = "^0.9"
cryptography = "^42"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
ruff = "^0.5"
black = "^24.4"

[tool.poetry.scripts]
cybersec = "cybersec.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
ignore = ["E402"]

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
