[tool.poetry]
name = "cybersec-new"
version = "0.1.0"
description = "Async network security toolkit"
authors = ["Yash <yash@example.com>"]
packages = [{include = "cybersec"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = "^0.30"
SQLAlchemy = "^2.0"
asyncpg = ">=0.29"
alembic = "^1.13"
python-jose = {extras = ["cryptography"], version = "^3.3"}
passlib = {extras = ["bcrypt"], version = "^1.7"}
groq = "^0.5"
click = "^8"
rich = "^13.7"
httpx = "^0.27"
dnspython = "^2.6"
python-whois = "^0.9"
cryptography = "^42"
reportlab = "^4.2"
pydantic-settings = "^2.14.1"
email-validator = "^2.2"
python-multipart = "^0.0"
redis = "^5.0"
slowapi = "^0.1"
mitreattack-python = "^1.0"
scapy = "^2.5"
arq = "^0.26"
respx = "^0.23.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
pytest-cov = "^7.1"
pytest-asyncio = "^0.24"

[tool.poetry.scripts]
cybersec = "cybersec.apps.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
